--- a/TanhoaSolar/pricing.html
+++ b/TanhoaSolar/pricing.html
@@ -5,16 +5,18 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pricing - Company Bootstrap Template</title>
+  <title>Tân Hoa Solar</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Tan-hoa/logo_10410403122019.png" rel="icon">
+  <link href="assets/img/Tan-hoa/logo_10410403122019.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +27,7 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -38,51 +40,74 @@
 </head>
 
 <body>
+  <div class="topbar">
+    <div class="container">
+      <div class="row">
+        <!-- social icon-->
+        <div class="col-sm-12">
+          <ul class="social-network">
+            <li><a class="waves-effect waves-dark" href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a class="waves-effect waves-dark" href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a class="waves-effect waves-dark" href="#"><i class="fab fa-linkedin"></i></a></li>
+            <li><a class="waves-effect waves-dark" href="#"><i class="fab fa-pinterest"></i></a></li>
+            <li><a class="waves-effect waves-dark" href="#"><i class="fab fa-google-plus"></i></a></li>
+          </ul>
+        </div>
 
+      </div>
+    </div>
+  </div>
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <header id="header">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html"><span>Com</span>pany</a></h1>
+      <h1 class="logo mr-auto"><a href="index.html"><img src="assets/img/Tan-hoa/logo_10410403122019.png" alt=""></a>
+      </h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
-
-          <li class="drop-down"><a href="">About</a>
+          <li class="active"><a href="index.html">Trang Chủ</a></li>
+          <li><a href="gioi-thieu.html">Giới Thiệu</a></li>
+          <li class="drop-down"><a href="#">Sản phẩm</a>
             <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
+              <li class="drop-down"><a href="gioi-thieu.html">Tủ Điện</a></li>
+
+              <li class="drop-down"><a href="testimonials.html">Biến Tần</a></li>
+              <li class="drop-down"><a href="#">Khởi Động mở</a></li>
+              <li class="drop-down"><a href="#">Cảm biến Suất</a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="#">Tủ Điện</a></li>
+                  <li><a href="#">Biến Tần</a></li>
+                  <li><a href="#">Điện Mặt Trời</a></li>
+                  <li><a href="#">Khởi Động mở</a></li>
+                  <li><a href="#">Cảm biến Suất</a></li>
+                </ul>
+              </li>
+
+              <li class="drop-down"><a href=".html">Điện Mặt Trời</a>
+                <ul>
+                  <li><a href="#">Tủ Điện</a></li>
+                  <li><a href="#">Biến Tần</a></li>
+                  <li><a href="#">Điện Mặt Trời</a></li>
+                  <li><a href="#">Khởi Động mở</a></li>
+                  <li><a href="#">Cảm biến Suất</a></li>
                 </ul>
               </li>
             </ul>
           </li>
+          <li><a href="dich-vu.html">Dịch Vụ</a></li>
 
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li class="active"><a href="pricing.html">Pricing</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
+
+          <li><a href="tin-tuc.html">Tin tức</a></li>
+          <li><a href="tuyen-dung.html">Tuyển Dụng</a></li>
+          <li><a href="lien-he.html">Liên Hệ</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
 
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
-      </div>
+
 
     </div>
   </header><!-- End Header -->
@@ -249,70 +274,64 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
+  
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
+  
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Company</h3>
+            <h3>CÔNG TY TNHH THƯƠNG MẠI VÀ DỊCH VỤ KỸ THUẬT TÂN HOA</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Địa chỉ:</strong> 29 Đường Số 11, Phường 11, <br>
+              Quận Gò Vấp,Thành Phố Hồ Chí Minh <br>
+              <strong>Văn Phòng Giao Dịch:</strong> Số 57/2 Quốc lộ 22, Khu Phố 3, Thị Trấn Hóc Môn, <br>
+              Huyện Hóc Môn, TP.HCM <br>
+              <br>
+              <strong>Điện Thoại:</strong> 028 - 62575363<br>
+              <strong>Fax:</strong> 028 - 62575557<br>
+              <strong>MST:</strong> 0304997724<br>
+              <strong>Email:</strong> sales@kythuattanhoa.com<br>
+              <strong>Website:</strong> www.kythuattanhoa.com<br>
             </p>
           </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
+  
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>CHÍNH SÁCH - HỖ TRỢ</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Chính sách bảo hành</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Chính sách hỗ trợ</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Chính sách bán hàng</a></li>
+  
+          </div>
+  
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>VỀ CHÚNG TÔI</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Trang chủ</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Giới thiệu</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Sản phẩm</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Tài liệu</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Tin tức</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Tuyển dụng</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Liên hệ</a></li>
             </ul>
           </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+  
+          <div class="col-lg-3 col-md-6 footer-newsletter">
+            <h4>ĐĂNG KÝ NHẬN TIN</h4>
+            <p>Hãy đăng ký nhận thông tin khuyến mãi mới</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
-
+  
         </div>
       </div>
     </div>
-
+  
     <div class="container d-md-flex py-4">
-
-      <div class="mr-md-auto text-center text-md-left">
-        <div class="copyright">
-          &copy; Copyright <strong><span>Company</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/company-free-html-bootstrap-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
-      </div>
+  
+  
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
